--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -18,9 +18,9 @@
 <strong><ahref="#_Toc2020101808">全球单日新病例首超40万 欧洲病例激增</a></strong><br />
 <strong><ahref="#_Toc2020101806">中共疫苗研发弯道超车 专家忧灾难性后果</a></strong><br />
 <strong><ahref="#_Toc2020101805">蓬佩奥：中共已经为瞒疫付出沉重代价</a></strong></p>
-<p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月17日下午1时，全球确诊感染<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数接近3,900万，死亡人数超过110万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
+<p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月17日下午1时，全球确诊感染<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数接近3,900万，死亡人数超过110万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>截至周五（10月16日）晚些时候，全球单日新增病例首破40万，其中欧洲新病例增幅最大，周五（10月16日）新增超15万病例。</p>
-<p>截至周六美东时间中午12：19分，美国疾控中心（CDC）数据显示，美国确诊病例超过802.8万例，死亡超过21.79万人。过去七天每10万人平均有16.7人感染。</p>
+<p>截至周六美东时间中午12：19，美国疾控中心（CDC）数据显示，美国确诊病例超过802.8万例，死亡超过21.79万人。过去七天每10万人平均有16.7人感染。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。多国单日新病例创新高，比利时和奥地利外长纷纷染疫。</p>
 <p>美国总统川普（特朗普）再次表示，中共向世界释放病毒，美国将追责，让中共为美国的刺激法案资金买单。美国国务卿蓬佩奥也表示，中共已经为瞒疫付出沉重代价。</p>
 <p>=======================</p>
@@ -31,12 +31,12 @@
 <p>纽时报导，部分原因可能是更广泛的测试。密歇根大学的流行病学家乔恩·泽尔纳（Jon Zelner）说，许多其他病例很可能是在没有症状或轻度疾病的年轻人中发现的，这些病例以前可能没有被发现。他在接受采访时说，这就是密歇根州现在正在发生的事情。</p>
 <p>但是他说，这也可能只是时间问题。他说，现在发生的死亡案例大都是30至40天前患病的人。预计当前病例的增加将反映在11月死亡人数的增加上。</p>
 <p>在欧洲国家和美国各州，单日和每周记录新病例的增加，越来越普遍。</p>
-<p>在美国，过去14天的平均每日报告病例增加了28％，住院人数也在增加，而死亡人数仅增加了1％。</p>
+<p>在美国，过去14天的平均每日报告病例增加了28%，住院人数也在增加，而死亡人数仅增加了1%。</p>
 <p>俄亥俄州，印第安纳州，北达科他州，伊利诺伊州，新墨西哥州，怀俄明州，科罗拉多州，南达科他州，肯塔基州，西维吉尼亚州和爱达荷州本周报告的病例数均超过了之前的7天。明尼苏达州也是如此，尽管由于计算机更新，该州周六未报告新病例。</p>
 <p>这些州中只有一个州——北达科他州——是八个报告死亡人数相对于其人口最高的州。</p>
 <p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其他城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
 <p>据卫生部称，波兰也达到了新的高度，周六有9,622例新感染，84例相关死亡。乌克兰已将封锁延长至今年年底，据其国家安全和国防委员会称，乌克兰周六分别记录了6,410例新感染和109例死亡。</p>
-<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，Covid-19现在是第五大死亡原因，每天的死亡人数已经达到了1000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
+<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，COVID-19现在是第五大死亡原因，每天的死亡人数已经达到了1000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
 <p><a name="_Toc2020101814"></a></p>
 <h3>推特删白宫顾问“口罩无用论”推文</h3>
 <p>推特（Twitter）从白宫中共病毒高级顾问斯科特·阿特拉斯博士（Dr. Scott Atlas）那里删除了一条推文，该推文质疑口罩在对抗COVID-19方面的有效性。</p>
@@ -47,31 +47,31 @@
 <h3>WHO：欧洲某些地区的重症监护病房近满员</h3>
 <p>世界卫生组织说，欧洲的中共病毒爆发是“令人担忧的”，因为病例激增，某些地区的重症监护病房（ICU）床位已接近饱和。</p>
 <p>世卫组织技术负责人玛丽亚·范·科霍夫（Maria Van Kerkhove）在一次新闻发布会上说，国际机构正在从欧洲许多城市中获悉，他们的ICU病床将在未来几周内完全饱和。她补充说：“在我们接近流感季节时，这令人担忧。”</p>
-<p>在进行人口调整后，欧洲新的中共病毒感染数量现已超过美国。欧洲报告7天内平均1百万人口中有187例新的Covid-19病例，而美国为162例新的Covid-19病例。</p>
+<p>在进行人口调整后，欧洲新的中共病毒感染数量现已超过美国。欧洲报告7天内平均1百万人口中有187例新的COVID-19病例，而美国为162例新的COVID-19病例。</p>
 <p>科霍夫敦促人们定期洗手，戴口罩，与他人保持距离并避免去人多的地方。</p>
 <h3>美众议长：对选举前达成协议感到乐观</h3>
 <p>针对最新刺激协议的谈判，众议院议长南希·佩洛西（Nancy Pelosi）周日在致民主党同事的一封信中说：“尽管有一些令人鼓舞的消息，但仍有很多工作要做。”</p>
 <p>周日早些时候，她表示需要在48小时内与政府达成协议，才能在选举日之前通过法案。她的办公室说时间表将在星期二晚上结束。</p>
 <p>她继续说：“我们希望找到共同点。”她写道，“我对我们可以在选举前达成协议感到乐观。为此，我们在谈判优先事项时正在书写下来，以便我们一旦达成协议就已做好充分的准备。”</p>
 <h3>伊利诺伊州报告4,000余新增病例</h3>
-<p>伊利诺伊州公共卫生部周日报告了4,245例新的Covid-19病例，22例死亡。</p>
-<p>该州的初步7天平均测试阳性率为5.3％。截至昨晚，已有2,012人因Covid-19住院，其中包括408名ICU患者和157名呼吸机患者。</p>
+<p>伊利诺伊州公共卫生部周日报告了4,245例新的COVID-19病例，22例死亡。</p>
+<p>该州的初步7天平均测试阳性率为5.3%。截至昨晚，已有2,012人因COVID-19住院，其中包括408名ICU患者和157名呼吸机患者。</p>
 <p>伊利诺伊州迄今已报告344,048例中共病毒病例，总计9,214例死亡。</p>
 <h3>明尼苏达州报告新增逾1,700例病例</h3>
-<p>明尼苏达州卫生部门周日报告了1,732例新的Covid-19病例，以及17例死亡。</p>
-<p>这使该州的Covid-19病例总数达到122,812，死亡总数为2,234。</p>
+<p>明尼苏达州卫生部门周日报告了1,732例新的COVID-19病例，以及17例死亡。</p>
+<p>这使该州的COVID-19病例总数达到122,812，死亡总数为2,234。</p>
 <p>约翰·霍普金斯大学的最新数据显示，明尼苏达州连续10天每天的新增病例数超过1000例，该州自大流行以来报告的每日最高记录为2,290。</p>
-<h3>纽约“红色区域”阳性率3.19％ 整体阳性率为1.08％。</h3>
-<p>州长安德鲁·库默（Andrew Cuomo）周日宣布，纽约布鲁克林、皇后区、罗克兰和奥兰治县某些特定“红色区域”重点地区的平均Covid-19阳性率目前为3.19％，低于周六的4.34％。</p>
-<p>库默说，纽约的整体阳性率（包括红色区域）为1.08％。</p>
-<p>库默说，截至周六，又有1784名纽约人的Covid-19呈阳性反应，另有7人死亡。</p>
+<h3>纽约“红色区域”阳性率3.19% 整体阳性率为1.08%。</h3>
+<p>州长安德鲁·库默（Andrew Cuomo）周日宣布，纽约布鲁克林、皇后区、罗克兰和奥兰治县某些特定“红色区域”重点地区的平均COVID-19阳性率目前为3.19%，低于周六的4.34%。</p>
+<p>库默说，纽约的整体阳性率（包括红色区域）为1.08%。</p>
+<p>库默说，截至周六，又有1784名纽约人的COVID-19呈阳性反应，另有7人死亡。</p>
 <h3>意大利新增病例连续第5天上升</h3>
 <p>意大利国家民防局周日表示，意大利已经连续第五天录得创纪录的每日新增阳性病例，共有11705例。</p>
 <p>在过去的24小时内，又有69人死亡，使死亡人数达到36,543。</p>
 <p>周日ICU病房增加了45人，目前共有750名中共病毒患者在ICU中治疗。</p>
 <p><a name="_Toc2020101812"></a></p>
-<h3>纽约滑雪场下月起可以室内50％容量开放</h3>
-<p>州长安德鲁·库默（Andrew Cuomo）周日表示，自11月6日起，纽约州的滑雪场将允许以室内50％的容量开放。</p>
+<h3>纽约滑雪场下月起可以室内50%容量开放</h3>
+<p>州长安德鲁·库默（Andrew Cuomo）周日表示，自11月6日起，纽约州的滑雪场将允许以室内50%的容量开放。</p>
 <p>以下是滑雪场重新开放的限制：</p>
 <p>除进食、饮水或滑雪外，任何时候都需要戴口罩。<br />
 保持社交距离。<br />
@@ -79,7 +79,7 @@
 滑雪课程最多可容纳10人。<br />
 共用的租赁设备必须彻底清洁和消毒。<br />
 食品、饮料、零售和班车运营必须遵守社会疏离准则。<br />
-在“高峰”日或由于条件恶劣而关闭多条步道时，山地容量必须降低25％。</p>
+在“高峰”日或由于条件恶劣而关闭多条步道时，山地容量必须降低25%。</p>
 <h3>爱尔兰宣布周一将实施全国性措施</h3>
 <p>高等教育部长西蒙·哈里斯（Simon Harris）周日表示，爱尔兰将于周一在全国范围内引入“决定性”的COVID-19限制，但将停止重新引入今年早些时候实行的封锁类型。</p>
 <p>爱尔兰政府在两周前拒绝了卫生部长的建议，即COVID-19遏制的警报级别调升为最高水平的5级，而是收紧了各种地区性措施的限制。</p>
@@ -92,7 +92,7 @@
 <p>但是，根据政府数据，过去24小时内死亡人数减少到67人。<br />
 <a name="_Toc2020101811"></a></p>
 <h3>瑞士宣布全国口罩令</h3>
-<p>为遏制Covid-19扩散，瑞士周日宣布了一系列包括口罩令的措施，将于周一生效。</p>
+<p>为遏制COVID-19扩散，瑞士周日宣布了一系列包括口罩令的措施，将于周一生效。</p>
 <p>根据政府的声明，瑞士联邦委员会采取了一些全国性的措施??，例如要求在公共场所可进入的室内区域戴口罩。</p>
 <p>自7月初以来，年龄在12岁以上的人必须在公共交通上戴口罩，但是新增的措施将要求在公共可到达的公共交通区域戴口罩，例如火车站（包括站台）、机场、公交车站和电车站。现在，在商店、邮局、银行、博物馆、图书馆、体育设施、餐厅和其它可公共访问的空间中，也需要口罩。</p>
 <p>在学校，高等教育机构和儿童保育设施中也需要口罩。</p>
@@ -100,16 +100,16 @@
 <p>政府指出：“最近几天冠状病毒（中共病毒）病例迅速增加，令人深感担忧。”<br />
 <a name="_Toc2020101810"></a></p>
 <h3>教皇方济各住所的居民测试呈阳性</h3>
-<p>梵蒂冈有教皇和其他神职人员的住所卡萨圣玛尔塔（Casa Santa Marta）大楼里的居民对Covid-19呈阳性反应。</p>
+<p>梵蒂冈有教皇和其他神职人员的住所卡萨圣玛尔塔（Casa Santa Marta）大楼里的居民对COVID-19呈阳性反应。</p>
 <p>罗马教廷发言人马泰奥·布鲁尼（Matteo Bruni）在一份声明中说，该居民目前无症状，与所有与他直接接触的人都被隔离在圣玛尔塔之家之外。</p>
 <p>他补充说，所有其他居民的健康都受到不断监测。</p>
 <p>该人的阳性测试使人们对83岁的教皇方济各和其他高级神职人员的健康状况感到担忧，就在几天前，梵蒂冈瑞士卫队的四名成员测试为阳性。</p>
 <p>布鲁尼在本周早些时候表示，这些警卫全都表现出症状，在他们的测试结果出来后，在梵蒂冈开始了一次接触者追踪行动。当时宣布，其他三名梵蒂冈居民最近几天也呈阳性。</p>
 <p>梵蒂冈城位于罗马市内，是罗马教皇的故乡和罗马天主教会的总部。</p>
-<p>意大利在10月9日报告了5,000多例新的中共病毒病例，这是自3月28日以来新的Covid-19病例的每日最高增幅。意大利部长理事会周三通过了一项法令，该法令要求在户外强制使用口罩，以期减慢病毒在全国的传播速度。</p>
+<p>意大利在10月9日报告了5,000多例新的中共病毒病例，这是自3月28日以来新的COVID-19病例的每日最高增幅。意大利部长理事会周三通过了一项法令，该法令要求在户外强制使用口罩，以期减慢病毒在全国的传播速度。</p>
 <h3>每日新增病例减少 以色列放宽部分限制</h3>
 <p>以色列已经开始放宽上个月在该国第二次全面封锁期间施加的一些限制，因为每天的中共病毒病例数持续下降。</p>
-<p>根据卫生部的数据，以色列在星期四和星期五分别记录了1,608例新病例和1,469例新病例，阳性率约为4.2％。这些数字比几周前以色列第二波高峰期的新病例大幅下降，当时一天就记录了9000多例，阳性率远远超过10％。</p>
+<p>根据卫生部的数据，以色列在星期四和星期五分别记录了1,608例新病例和1,469例新病例，阳性率约为4.2%。这些数字比几周前以色列第二波高峰期的新病例大幅下降，当时一天就记录了9000多例，阳性率远远超过10%。</p>
 <p>作为放宽的限制措施的一部分，将允许公民离开他们的家超过1公里。天然公园和海滩将重新开放。餐厅将允许外卖而不是仅外送。更多的企业将重新开放。</p>
 <p>总理本杰明·内塔尼亚胡（Benjamin Netanyahu）表示，经济的重新开放将循序渐进。内塔尼亚胡在星期六晚上强调说：“遵守规则很重要。”</p>
 <p>以色列有许多感染率高的“红色城市”，它们不会重新开放，并且严格的限制将继续存在。</p>
@@ -117,8 +117,8 @@
 <p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，在美国，至少有8,106,384例中共病毒病例，至少有219,286人死亡。</p>
 <p>周六，约翰·霍普金斯大学报告了57,519例新病例和711例新死亡。</p>
 <h3>美国29州新病例上升</h3>
-<p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，只有两个州，佛蒙特州和密苏里州，在过去一周报告的平均病例数下降了10％以上。</p>
-<p>同时，康涅狄格州和佛罗里达州的病例增加了50％或更多。另外27个州上涨了10％至50％。</p>
+<p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，只有两个州，佛蒙特州和密苏里州，在过去一周报告的平均病例数下降了10%以上。</p>
+<p>同时，康涅狄格州和佛罗里达州的病例增加了50%或更多。另外27个州上涨了10%至50%。</p>
 <h3>疫情导致日本自杀率增加 73%人感到不安</h3>
 <p>日本政府承认，自今年七月以来，自杀人数呈现递增趋势。政府已将预防自杀行为的预算提高了40%，增加心理辅导站和热线。</p>
 <p>今年演艺圈内的22岁电视真人秀参与者木村花、33岁的影视明星三浦春马、两位女演员芦名星和竹内结子先后自杀。不仅是演艺圈，在疫情笼罩下的日本，自杀正在成为一个社会问题。</p>
@@ -126,7 +126,7 @@
 <a name="_Toc2020101809"></a></p>
 <h3>德国总统进行自我隔离</h3>
 <p>目前，德国总统弗兰克-瓦尔特·施泰因迈尔（Frank-Walter Steinmeier）的发言人说，总统的一名保安测试呈阳性后，总统正在自我隔离。</p>
-<p>10月17日，德国总理默克尔向公民发出紧急呼吁。她说德国目前处于“极为严峻”的疫情大流行阶段，病毒的传播速度 “比半年多前开始时要快得多”。她呼吁民众大幅减少社交接触，避免疫情蔓延失控。</p>
+<p>10月17日，德国总理默克尔向公民发出紧急呼吁。她说德国目前处于“极为严峻”的疫情大流行阶段，病毒的传播速度“比半年多前开始时要快得多”。她呼吁民众大幅减少社交接触，避免疫情蔓延失控。</p>
 <p>德国疾控机构罗伯特·科赫研究所当天数据显示，德国新增确诊病例7,830例，创该国疫情暴发以来单日新增病例数新高，累计确诊356,387例。</p>
 <h3>瑞典报告了首例第二次感染病例</h3>
 <p>10月16日，瑞典研究人员报告了该国首例二次感染病例。患者是一名53岁女性，第二次感染中共病毒后症状较轻。</p>
@@ -143,15 +143,15 @@
 <p>在本周内新增5起确诊病例之前，泰国最近一次确认新增本土病例发生在9月11日。截至目前，泰国总共确诊3686例、死亡59例。</p>
 <p>而目前，泰国民众正在进行抗议活动，该国国王和总理的权威以及传统统治精英的权威被挑战。</p>
 <h3>北京武汉预约接种中共病毒疫苗 引专家忧虑</h3>
-<p>中国国药集团已经在北京和武汉开放预约接种中共疫苗，并且宣布出国留学生优先，报名者2个星期后可以到指定地点接种。南华早报报导，到10月13号星期二为止，已经有15万5千多人报名，76万多人表示有兴趣。</p>
+<p>中国国药集团已经在北京和武汉开放预约接种中共疫苗，并且宣布出国留学生优先，报名者2个星期后可以到指定地点接种。南华早报报导，到10月13日星期二为止，已经有十五万五千多人报名，七十六万多人表示有兴趣。</p>
 <p>美国之音报导，原沃尔特·里德陆军研究所病毒专家林晓旭说，国药集团这么做是不合理的，因为就算是非常成功的疫苗，在这样大疫情之下，也应该考虑哪些地区的疫情比较严重，哪些医疗机构人员更需要打疫苗，而不是让民众来哄抢。</p>
 <p>他指出，国药公司这么做实际上是为了配合他们公司的股票升值的问题，是一种炒作。</p>
 <p>随后又有报导说，国药集团的官网上撤掉了报名的通道。但国药并没有出面澄清这个消息。这种缺乏透明度的做法令人质疑。</p>
-<p>中共在10月8号确认，加入了中共肺炎疫苗保障机制，成为第171个成员国。不过，中国产的疫苗并非在每个区域都受欢迎，比如台湾福卫部长陈时中明确表示，台湾将不买中国疫苗。</p>
+<p>中共在10月8日确认，加入了中共肺炎疫苗保障机制，成为第171个成员国。不过，中国产的疫苗并非在每个区域都受欢迎，比如台湾福卫部长陈时中明确表示，台湾将不买中国疫苗。</p>
 <h3>中共病毒在皮肤上存活的时长是流感的五倍</h3>
-<p>日本研究人员发现，中共病毒在人体皮肤上可持续活跃9个小时。他们表示，这表明人们需要用经常洗手的方式来抵抗中共肺炎（Covid-19）大流行。</p>
+<p>日本研究人员发现，中共病毒在人体皮肤上可持续活跃9个小时。他们表示，这表明人们需要用经常洗手的方式来抵抗中共肺炎（COVID-19）大流行。</p>
 <p>这项研究发表在传染病领域的权威期刊《临床传染病》杂志本月期刊上。</p>
-<p>研究显示，“与IAV（甲型流感病毒）相比，SARS-CoV-2（引起Covid-19的病毒株）能在人类皮肤上存活九小时，这可能会增加接触传播风险，从而加速大流行。”</p>
+<p>研究显示，“与IAV（甲型流感病毒）相比，SARS-CoV-2（引起COVID-19的病毒株）能在人类皮肤上存活九小时，这可能会增加接触传播风险，从而加速大流行。”</p>
 <p>该研究小组是从死后一天的尸体上提取的皮肤样本，然后进行测试。</p>
 <p>不过，中共病毒和流感病毒均可在15秒内被（可以被涂抹在手上的消毒剂）乙醇灭活。</p>
 <p><a name="_Toc2020101808"></a></p>
@@ -160,32 +160,32 @@
 <p>在最近几周内，欧洲在过去一周平均每天报告14万新病例，周五则超过15万新病例。</p>
 <p>作为一个地区，欧洲每天报告的病例超过印度、巴西和美国的总和。</p>
 <p>根据路透社的分析，在全世界每100例感染中，有34例来自欧洲国家。自中共病毒大流行开始以来，该地区目前大约每九天报告一百万例新感染病例，总计报告了超过630万例病例。</p>
-<p>据路透社统计，截至10月18日当周，欧洲主要国家（英国，法国，俄罗斯，荷兰和西班牙）新感染人数约占欧洲新病例的一半。</p>
-<p>法国报告的7天平均新病例欧洲最高，每天感染19,425例，其次受影响最严重的欧洲国家包括英国，俄罗斯，西班牙和荷兰。</p>
+<p>据路透社统计，截至10月18日当周，欧洲主要国家（英国、法国、俄罗斯、荷兰和西班牙）新感染人数约占欧洲新病例的一半。</p>
+<p>法国报告的7天平均新病例欧洲最高，每天感染19,425例，其次受影响最严重的欧洲国家包括英国、俄罗斯、西班牙和荷兰。</p>
 <p>CNBC对霍普金斯数据的分析包括27个欧盟国家以及英国在内的欧洲国家，每天平均报告约97,000新病例，比一周前增长了44%。</p>
 <p>在过去两周中，法国、西班牙和英国每十万居民中有三百多例感染；相比之下，意大利的发病率虽有所上升，但相对较低，为106，不过周五意大利单日新病例已经破万，创下疫情爆发以来纪录。</p>
 <p>捷克共和国报告每十万人中有七百多人受到感染，该国军队将在本周末开始在布拉格展览中心建立野战医院。政府还与邻近的德国和其它一些国家进行谈判，以便捷克人在卫生系统无法应对的情况下接受治疗。</p>
 <p>在过去14天内，比利时每10万人新增感染率高达约578例，在欧洲排名第2，仅次于捷克。比利时周六报告，每10万人感染者已经超过600。</p>
-<figure id="attachment_12481278" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229090388.jpg"><img class="size-large wp-image-12481278" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229090388-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，法国总理让·卡斯特克斯（右二）和巴黎市长安妮·伊达尔戈（右一）在一个的Covid-19测试中心会见医疗人员。法国从10月16日晚9点起，将在巴黎和其它八个城市实施宵禁。（LUDOVIC MARIN/POOL/AFP via Getty Images）</figcaption></figure>
-<p>据路透社分析，拉丁美洲是受影响最严重地区，约占全球总COVID-19病例的27％。</p>
+<figure id="attachment_12481278" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229090388.jpg"><img class="size-large wp-image-12481278" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229090388-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，法国总理让·卡斯特克斯（右二）和巴黎市长安妮·伊达尔戈（右一）在一个的COVID-19测试中心会见医疗人员。法国从10月16日晚9点起，将在巴黎和其它八个城市实施宵禁。(LUDOVIC MARIN/POOL/AFP via Getty Images)</figcaption></figure>
+<p>据路透社分析，拉丁美洲是受影响最严重地区，约占全球总COVID-19病例的27%。</p>
 <p><a name="_Toc2020101803"></a></p>
 <h3>麦康奈尔提出“瘦”型救助法案 美参院下周投票</h3>
-<p>美国参议院多数党领袖米奇?麦康奈尔（Mitch McConnell）周六（10月17日）详细介绍了一项5000亿美元的“瘦”型救助法案，他说参议院将在下周三（10月21日）投票。</p>
+<p>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周六（10月17日）详细介绍了一项5000亿美元的“瘦”型救助法案，他说参议院将在下周三（10月21日）投票。</p>
 <p>该法案的目标比白宫的1.8万亿美元救助法案更具针对性，它将扩大联邦失业救济金，补充“工资保护计划”，向学校提供超过1000亿美元的资金，并为疫苗生产、分发以及测试和追踪提供资金。</p>
-<p>麦康奈尔说，除非民主党进行阻挠，否则参议院将对该法案进行投票，然后再对艾米?科尼?巴雷特法官的最高法院大法官确认进行投票。</p>
+<p>麦康奈尔说，除非民主党进行阻挠，否则参议院将对该法案进行投票，然后再对艾米·科尼·巴雷特法官的最高法院大法官确认进行投票。</p>
 <p>他需要60票才能在参议院通过该法案。民主党此前曾阻止过类似的法案。</p>
-<p>白宫提出了1.8万亿美元的救助法案，但众议院议长南希?佩洛西拒绝了白宫的法案。</p>
-<figure id="attachment_12043410" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/7ac5ee0b9d22f29d723d92a3ea04f2eb.jpg"><img class="size-large wp-image-12043410" src="https://i.epochtimes.com/assets/uploads/2020/04/7ac5ee0b9d22f29d723d92a3ea04f2eb-600x386.jpg" alt="" width="600" b="386" /></a><figcaption class="wp-caption-text">美国参议院多数党领袖麦康奈（Mitch McConnell）。 (SAUL LOEB/AFP via Getty Images)</figcaption></figure>
+<p>白宫提出了1.8万亿美元的救助法案，但众议院议长南希·佩洛西拒绝了白宫的法案。</p>
+<figure id="attachment_12043410" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/7ac5ee0b9d22f29d723d92a3ea04f2eb.jpg"><img class="size-large wp-image-12043410" src="https://i.epochtimes.com/assets/uploads/2020/04/7ac5ee0b9d22f29d723d92a3ea04f2eb-600x386.jpg" alt="" width="600" b="386" /></a><figcaption class="wp-caption-text">美国参议院多数党领袖麦康奈（Mitch McConnell）。(SAUL LOEB/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101802"></a></p>
 <h3>数千英国人上街抗议封锁措施</h3>
 <p>周六（10月17日），英国示威者聚集在伦敦市中心，反对英国实施封锁措施。</p>
-<p>随着新病例激增，英国首相鲍里斯?约翰逊（Boris Johnson）的政府加强了英格兰部分地区的限制，希望通过允许受影响最小的地区保持开放来保护经济。</p>
-<p>伦敦疫情警报升至“ 2级”或“高风险”级别。政府禁止人们在非居家环境或“支持泡泡”之外，和任何人见面，包括帮助照顾孩子的朋友或亲戚。</p>
+<p>随着新病例激增，英国首相鲍里斯·约翰逊（Boris Johnson）的政府加强了英格兰部分地区的限制，希望通过允许受影响最小的地区保持开放来保护经济。</p>
+<p>伦敦疫情警报升至“2级”或“高风险”级别。政府禁止人们在非居家环境或“支持泡泡”之外，和任何人见面，包括帮助照顾孩子的朋友或亲戚。</p>
 <p>该规则还禁止超过六人在户外见面。尽管警察选择不强制执行这些命令，仍引发数千名反封锁运动人士在牛津街（平时是世界上最繁忙购物街之一）上游行。</p>
 <p>抗议者认为COVID-19限制是不必要的，并且侵犯了他们的人权。有些人反对戴口罩和接种疫苗。</p>
 <p>有些人举着标语说：“我的身体我的选择，不要强制面具”。</p>
 <p>截至周六，英国57%的人口生活在更为严格的COVID-19限制之下。</p>
-<figure id="attachment_12483696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D.jpg"><img class="wp-image-12483696 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周六（10月17日），英国示威者聚集在伦敦市中心，反对英国实施封锁措施。 (Photo by JUSTIN TALLIS / AFP)</figcaption></figure>
+<figure id="attachment_12483696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D.jpg"><img class="wp-image-12483696 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周六（10月17日），英国示威者聚集在伦敦市中心，反对英国实施封锁措施。(JUSTIN TALLIS/AFP)</figcaption></figure>
 <h3>俄亥俄州新病例破2,000</h3>
 <p>俄亥俄州周六（10月17日）打破单日新病例纪录，且连续第四天每天超过2000例感染。<br />
 周六。该州报告2234人被感染，病例总计180,225人。该州在过去三周中增加了30,000病例，平均每天增加1,439例。</p>
@@ -193,28 +193,28 @@
 <h3>印第安纳州新病例连续第二天破纪录</h3>
 <p>印第安纳州连续第二天刷新新感染记录。该州周六（10月17日）报告了2,521新病例，虽然说有100例属于旧病例，但仍超过周五创下的2,283例最高记录。</p>
 <p>自9月中旬以来，该州总病例数已达145,977，死亡总数3,685。</p>
-<figure id="attachment_12478351" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800.jpg"><img class="size-large wp-image-12478351" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">位于印第安那州，彻斯特顿市的 O&#8217;Gara and Wilson Antiquarian Booksellers 古书收藏，店橱窗上的标语：“入内请戴面罩。”(Scott Olson/Getty Images)</figcaption></figure>
+<figure id="attachment_12478351" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800.jpg"><img class="size-large wp-image-12478351" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">位于印第安那州，彻斯特顿市的O&#8217;Gara and Wilson Antiquarian Booksellers古书收藏，店橱窗上的标语：“入内请戴面罩。”(Scott Olson/Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101807"></a></p>
 <h3>美国大草原州病例增幅大</h3>
-<p>截至周六美东时间中午12：19分，美国疾控中心（CDC）数据显示，过去七天每10万人平均有16.7人感染。</p>
-<p>根据约翰?霍普金斯的数据，美国平均每天新增约55,000病例，与一周前相比增长了16％以上。北达科他州、南达科他州、蒙大拿州和威斯康星州每10万居民中感染人数达最高。</p>
+<p>截至周六美东时间中午12：19，美国疾控中心（CDC）数据显示，过去七天每10万人平均有16.7人感染。</p>
+<p>根据约翰·霍普金斯的数据，美国平均每天新增约55,000病例，与一周前相比增长了16%以上。北达科他州、南达科他州、蒙大拿州和威斯康星州每10万居民中感染人数达最高。</p>
 <p>疫情在某些州变得严重。威斯康星州州长托尼?埃弗斯（Tony Evers）于本周在州立博览会公园启用另一家护理设施，该设施向染疫患者开放。</p>
 <p>在北达科他州，病例数比一周前增长了近34%，当地官员担心一些医院可能没有足够人员来治疗重症者。</p>
 <p>今年春天，美国疫情最严重的州在东北部各州和西部的加州，夏季则是阳光地带的州病例激增。</p>
-<p>根据约翰?霍普金斯大学和彭博社汇编的数据，周五美国新病例增加69,276，是连续第四天上升，并且是7月29日以来的最高纪录。</p>
-<figure id="attachment_12483331" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361.jpg"><img class="wp-image-12483331 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月9日，威斯康星州国家警卫队成员在为民众进行测试。 ( Scott Olson/Getty Images)</figcaption></figure>
+<p>根据约翰·霍普金斯大学和彭博社汇编的数据，周五美国新病例增加69,276，是连续第四天上升，并且是7月29日以来的最高纪录。</p>
+<figure id="attachment_12483331" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361.jpg"><img class="wp-image-12483331 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月9日，威斯康星州国家警卫队成员在为民众进行测试。(Scott Olson/Getty Images)</figcaption></figure>
 <h3>斯洛伐克民众抗议防疫限制</h3>
 <p>斯洛伐克爆发首个反对防疫限制的大规模抗议活动，数百名示威者反对强制性戴口罩和其它限制，抗议活动还引发暴力袭击警察。</p>
 <p>抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。</p>
 <p>周五（10月16日），该国记录了1,968新病例，有11人死亡。本月，政府禁止所有公共活动，关闭酒吧和餐馆，并要求在户外佩戴口罩。</p>
-<figure id="attachment_12483590" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN.jpg"><img class="wp-image-12483590 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月17日，抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。(Photo by VLADIMIR SIMICEK / AFP)</figcaption></figure>
-<h3>法国单日新增3万多病例 创纪录</h3>
+<figure id="attachment_12483590" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN.jpg"><img class="wp-image-12483590 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月17日，抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。(VLADIMIR SIMICEK/AFP)</figcaption></figure>
+<h3>法国单日新增三万多病例 创纪录</h3>
 <p>法国周六（10月16日）报告称，在过去24小时内，有32,427新病例。</p>
 <p>政府已于周六在巴黎地区和其他八个大都市地区实施宵禁，从晚上9点开始将人们限制在家中，直到凌晨6点，持续四个星期。</p>
 <h3>不到一周时间 英国增10万病例</h3>
 <p>周六（10月17日），英国报告了16,171新病例，150人死亡。</p>
-<p>自上周日以来，英国已增加了100,000多个新病例，几乎占705,428病例总数的15%。伦敦和埃塞克斯郊区周六已实施限制，人们被禁止在室内与家庭以外的人见面。</p>
-<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="wp-image-12478668 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地Covid警报级别目前为中的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。（JUSTIN TALLIS/AFP via Getty Images）</figcaption></figure>
+<p>自上周日以来，英国已增加了十万多个新病例，几乎占705,428病例总数的15%。伦敦和埃塞克斯郊区周六已实施限制，人们被禁止在室内与家庭以外的人见面。</p>
+<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="wp-image-12478668 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地Covid警报级别目前为中的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。(JUSTIN TALLIS/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101806"></a></p>
 <h3>中共疫苗研发弯道超车 专家忧灾难性后果</h3>
 <p>中共在疫苗研发上信息始终不透明，也不依照一般国际通用规范，西方专家担心，这可能会造成“灾难性后果”。</p>
@@ -242,7 +242,7 @@
 <p>蓬佩奥还谈到孔子学院想进入亚利桑那州的学校，对美国孩子进行宣传。政府已经制止了中共的很多动作，但还有更多工作要做。</p>
 <p>国务卿随即举例说明中共在疫情上的隐瞒和对世界的有害做法。他表示，中国人（中共）对武汉病毒做出一系列非常危险的决定。它们知道自己有问题。它们知道需要关闭武汉，但它们继续允许（武汉人在）国际上旅行。它们没有让美国找出病毒的真正来源，而了解病毒起源有助于实时响应。</p>
 <p>“现在我们已经努力了几个月，仍然没有得到访问权限，以便我们了解武汉病毒实际上在中国内部的起源。那是危险的事情。随着时间流逝，全世界将对此进行反思，我认为中国共产党将为此付出实际的代价。”蓬佩奥说。</p>
-<figure id="attachment_12476010" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938.jpg"><img class="wp-image-12476010 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国国务卿蓬佩奥。( Manuel Balce CENETA / POOL / AFP)</figcaption></figure>
+<figure id="attachment_12476010" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938.jpg"><img class="wp-image-12476010 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国国务卿蓬佩奥。(Manuel Balce CENETA/POOL/AFP)</figcaption></figure>
 <h3>加拿大餐馆在疫情下挣扎 慷慨客户给大笔小费</h3>
 <p>加拿大渥太华一家亚洲风味餐馆Bambu Restaurant在Instagram上发布了一条感人的信息。帖子写到，上周一位常客给了700美元小费。</p>
 <p>根据收据信息，这名客户在购买43美元一瓶的葡萄酒时，慷慨地支付了这笔巨款小费。</p>
@@ -250,7 +250,7 @@
 <p>餐馆的共同所有者路珍妮（Jenny Lu）告诉CTV新闻，该客户上周五晚上买了这瓶酒，因为他听说渥太华将采取更加严格的抗疫措施，并且该餐厅至少必须在接下来28天关闭室内用餐。</p>
 <p>路珍妮说，当顾客留下700美元小费时，工作人员甚至流下眼泪。</p>
 <p>像许多其它餐馆一样，这家餐馆也在疫情下挣扎。路珍妮告诉CTV新闻，她想保留工作人员，但是饭厅不开业就很难。</p>
-<figure id="attachment_7579234" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L.jpg"><img class="wp-image-7579234 size-large" src="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L-600x452.jpg" alt="" width="600" b="452" /></a><figcaption class="wp-caption-text">示意图。（fotolia）</figcaption></figure>
+<figure id="attachment_7579234" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L.jpg"><img class="wp-image-7579234 size-large" src="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L-600x452.jpg" alt="" width="600" b="452" /></a><figcaption class="wp-caption-text">示意图。(fotolia)</figcaption></figure>
 <h3>疫情影响 美国品牌尝试电视购物</h3>
 <p>为了吸引居家购物者，一些品牌正在复制QVC。</p>
 <p>QVC是美国最大的电视购物公司，成立于1986年，总部位于美国宾夕法尼亚州威彻斯特，其旗下频道通过地面、卫星、有线电视及互联网面向全球多国播出。“QVC”的名称源自“Quality, Value, Convenience”（质量、价格、便捷）的首字母缩写。</p>
@@ -270,7 +270,7 @@
 <figure id="attachment_8682748" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/01/1604211619512483.jpg"><img class="wp-image-8682748 size-large" src="https://i.epochtimes.com/assets/uploads/2017/01/1604211619512483-600x400.jpg" alt="自助旅行" width="600" b="400" /></a><figcaption class="wp-caption-text">示意图。(shutterstock)</figcaption></figure>
 <p><a name="_Toc2020101801"></a></p>
 <h3>疫情促美国人开车减少 或成未来趋势</h3>
-<p>Covid大流行初期，美国人开车骤减，经季节性调整后，从2月到4月，汽车行驶里程减少41%。到7月，即美国联邦公路管理局发布数据的最近一个月，车辆行驶里程与2月份相比仍下降了13%（经季节调整）。</p>
+<p>COVID-19大流行初期，美国人开车骤减，经季节性调整后，从2月到4月，汽车行驶里程减少41%。到7月，即美国联邦公路管理局发布数据的最近一个月，车辆行驶里程与2月份相比仍下降了13%（经季节调整）。</p>
 <p>随着美国人今年和明年返回办公室，驾车肯定会接近大流行前水平，但可能永远无法回到以前水平。</p>
 <p>会计和咨询公司毕马威会计师事务所（KPMG）今年夏天进行的一项研究预测，未来几年汽车里程数将保持在2020年之前水平的90%左右。按人均计算，甚至比大流行病之前的2000年代中期历史最高水平下降了5%。</p>
 <p>里程数下降的原因很简单：越来越多的人开始在家中工作，并在线娱乐和购买物品。虽然送货增加会带来里程数，但总的来说，与每个人亲自驾车购物相比，总体里程仍然更少。</p>
@@ -282,16 +282,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a></li>
 <li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】川普：勿忘病毒来自中国</a></li>
 <li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485442.md#1">华为大势已去？跨大西洋联盟打造清洁网络</a></li>
 <li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484974.md#1">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11538169.md#1" target="_blank">福瑞德：探寻中国百年历史的真相</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
