--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,10 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>国泰航空今年前9个月载客量同比下降83%</h3>
+<p>总部位于香港的国泰航空周一发布公告，2020年前9个月，搭乘国泰航空的乘客数量较去年同期下降了83.2%。</p>
+<p>国泰航空的首席客户和商务官罗纳德·林（Ronald Lam）表示，他预计国泰航空在2020年余下的时间里，将以大流行病之前的客运航班运力的10%左右运营，明年全年的运力将低于50%。</p>
+<p>他说：“我们假设明年上半年的运营能力将远低于大流行病之前的运力的四分之一，但在下半年将会看到复苏——只是假设目前正在开发的疫苗被证明是有效的，并在2021年夏季之前被我们的主要市场广泛采用。”</p>
 <h3>美国周日新增48210例Covid-19病例</h3>
 <p>根据约翰-霍普金斯大学的数据，美国周日共诊断出48210例新的Covid-19病例，同时还报告新增388例与该病毒相关的死亡病例。</p>
 <p>根据该大学的统计，自疫情爆发以来，目前全美至少有8,154,594个感染Covid-19病例，以及至少有219,674人死亡。</p>
@@ -151,7 +155,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10920991.md#1" target="_blank">十八年宿疾消散 台湾女子感恩法轮功</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
