--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -155,7 +155,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
